fix: add margin around CTA on mobile

--- a/resources/assets/sass/mod01.scss
+++ b/resources/assets/sass/mod01.scss
@@ -43,3 +43,9 @@ $cta--color: $NavyBlue;
       width: unset;
   }
 }
+
+@media screen and (max-width: 800px) {
+  .cta-question-buttons {
+      margin: 1%;
+  }
+}
